# Stealth_ai_python_backend

./: .dockerignore  .gitignore  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/controllers/: __init__.py  enhanced_controller.py  figma_controller.py  file_controller.py  generate_controller.py  github_controller.py  job_controller.py
app/core/: __init__.py  config.py  events.py  exceptions.py  logging.py  middleware.py  security.py
app/helpers/: __init__.py  code_formatter.py  common.py  compression.py  enhanced_parser.py  file_organizer.py  integrated_parser.py  json_chunker.py  parser.py  prompt_builder.py  rate_limiter.py  retry.py  robust_parser.py  validation.py
app/models/: __init__.py  domain.py  enums.py  (+1 more)
config/: env.development.example  env.example  env.local.example  env.production.example  env.test.example
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  ENV_SETUP_GUIDE.md  PROMPT_STRUCTURE_ANALYSIS.md  USAGE_GUIDE.md
examples/: README_DOCKER_LOGS.md  example_requests.json  generate_code.py  simple_api_test.py  test_api.sh  test_api_endpoints.py  test_enhanced_logging.py  test_figma_frames.py  test_figma_screen_by_screen.md  test_large_figma.py  test_ngo_figma.py  test_prototype_url.py  test_prototype_url_fix.py  test_real_figma.py  test_with_postman.md  test_your_figma.py  view_docker_logs.py
prompts/: README.md
scripts/: generate_secrets.sh  setup_env.sh  setup_env_files.sh  setup_env_windows.ps1  setup_secure_env.sh
storage/: .gitkeep
(+140 files in other folders)
